k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: soham04/gb-product-service
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "600m"      # Increased from 0.5 to 1.0
            memory: "512Mi"
          requests:
            cpu: "300m"      # Increased from 0.2 to 0.5
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
