k8s/product-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-clusterip
spec:
  selector:
    app: product-service
  ports:
  - name: product-service
    protocol: TCP
    port: 4000
    targetPort: 3000
