k8s/user-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-clusterip
spec:
  selector:
    app: user-service
  ports:
  - port: 4002
    targetPort: 3000
